truncate intro tags, and truncate intro and Q&A tags in lineup block,fix exhibit page content zindex

--- a/wp-content/themes/abertoir2022/css/styles.css
+++ b/wp-content/themes/abertoir2022/css/styles.css
@@ -742,6 +742,7 @@ button:focus {
     margin-top: 0;
     position: relative;
     top: -2rem;
+    z-index: 200;
   }
 }
 @media screen and (min-width: 782px) {
