--- a/wp-content/themes/abertoir2022/scss/_exhibit-page.scss
+++ b/wp-content/themes/abertoir2022/scss/_exhibit-page.scss
@@ -14,6 +14,7 @@
         margin-top: 0;
         position: relative;
         top: -2rem;
+        z-index: 200;
     }
 
     /*@media screen and (max-width: 781px) {
